# OSp2

./: .gitignore  CMakeLists.txt  License.txt  README.md  Retrospective.md  debug.sh  test.sh
src/: CMakeLists.txt  lab.cpp  lab.h  labconfig.h.in  main.cpp
tests/: CMakeLists.txt  test-lab.cpp
